--- a/categoria.html
+++ b/categoria.html
@@ -52,7 +52,7 @@
     <li class="">
       <img src="/img/pokeball.png" alt="" class="iconball">
       <a href="/categorias.html" class="categorias">
-        Categorias
+        Categoria
       </a>
     </li>
 <br>
@@ -67,7 +67,7 @@
 <!--Fim Area Menu-->
 
 <div class="categoria">
-<h1>Categorias</h1>
+<h1>Categoria</h1>
 
 <img src="/img/bulbasaur2.png" alt="" class="bul">
 <p class="bult">Os Pokémon iniciais são os que os treinadores recebem no início de suas jornadas, geralmente um de Fogo, Água e Planta.</p>
