--- a/categoria.html
+++ b/categoria.html
@@ -43,7 +43,7 @@
   <ul class="menu">
     <li class="home">
       <img src="/img/pokeball.png" alt="" class="iconball">
-      <a href="/index.html" >
+      <a .href="/index.html" >
         Home
       </a>
 <p></p>
