--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--Area CSS-->
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/globas.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/globas.css">
   <!--fim Area CSS-->
 
   <title>Pokedex</title>
 
   <!--AREA Normalize CSS-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href=".https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!--Fim Area Normalize CSS-->
 
   <!--Area Fonts-->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
+  <link rel="preconnect" href=".https://fonts.googleapis.com">
+  <link rel="preconnect" href=".https://fonts.gstatic.com" crossorigin>
+  <link href=".https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
   <!--Fim Area Fonts-->
 
   <!--Area Favicon-->
-  <link rel="icon" type="pokebola" href="/img/favball2.png" class="favcon">
+  <link rel="icon" type="pokebola" href="./img/favball2.png" class="favcon">
   <!--Fim Area Favicon-->
   
 </head>
@@ -32,7 +32,7 @@
 
   <div class="body">
     
-    <img src="/img/pokedexicon.png" alt="pokedexicon" class="pokeicon">
+    <img src="./img/pokedexicon.png" alt="pokedexicon" class="pokeicon">
     <div class="title">
 <h1>  
   PokéDex
@@ -42,23 +42,23 @@
 <!--Area Menu-->
   <ul class="menu">
     <li class="home">
-      <img src="/img/pokeball.png" alt="" class="iconball">
-      <a href="/index.html" class="home">
+      <img src="./img/pokeball.png" alt="" class="iconball">
+      <a href="./index.html" class="home">
         Home
       </a>
 
     </li>
 <br>
     <li class="">
-      <img src="/img/pokeball.png" alt="" class="iconball">
-      <a href="/categorias.html" class="categorias">
+      <img src="./img/pokeball.png" alt="" class="iconball">
+      <a href="./categorias.html" class="categorias">
         Categorias
       </a>
     </li>
 <br>
     <li>
-      <img src="/img/pokeball.png" alt="" class="iconball">
-      <a href="/login.html" class="login">
+      <img src="./img/pokeball.png" alt="" class="iconball">
+      <a href="./login.html" class="login">
         Login
 
       </a>
@@ -74,7 +74,7 @@
   <P class="sobre">Nossa PokeDex é um repositório de informações sobre as criaturas do mundo pokemon…
 
   </P>
-  <img src="/img/Pokédex_Kanto.png" alt="" class="pokedex">
+  <img src="./img/Pokédex_Kanto.png" alt="" class="pokedex">
   <p class="intro">
     Então treinador, prepare sua pokebola e embarque nesta aventura emocionante! a jornada começa quando você decide explorar o mundo magico dos pokemons. DIVIRTA-SE!!!
   </p>
