--- a/categorias.html
+++ b/categorias.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!--Area CSS-->
+
   <link rel="stylesheet" href="./css/categorias.css">
   <link rel="stylesheet" href="./css/globas.css">
+
   <!--fim Area CSS-->
 
   <title>Pokedex</title>
@@ -28,56 +30,371 @@
   <!--TODAS AS INFORMAÇÕES CONTIDAS NESSE SITE SÃO APENAS PRATICAS DE ESTUDOS COM INFORMAÇÕES REAIS COLHIDAS NO SITE “https://www.pokemon.com/br/pokedex/” O QUAL E O CRIADOR ORIGINAL DE TODOS OS CONTEÚDOS AQUI DIVULGADOS.-->
 
 
-<body>
+  <body>
 
-  <div class="body">
+    <div class="container">
+  
+    <header class="topo">  
+  <img src="./img/banner6.png" alt="banner" class="banimg">
+  </header>
+
+
+
+<!-- Area Menu-->
+<ul class="menu">
+
+  <ol class="menu__icon">
+    <a href="./index.html" >
+    <img src="./img/home.png" alt="" class="icon">
+
+      <p>Inicio</p>
+    </a>
+
+  </ol>
+<br>
+  <ol class="menu__icon">
+    <a href="./categorias.html">
+    <img src="./img/dexicon.png" alt="" class="icon">
+
+      <p>Categorias</p>
+    </a>
+  </ol>
+<br>
+  <ol class="menu__icon">
+    <a href="./login.html">
+    <img src="./img/login.png" alt="" class="icon">
+
+  <p>Login</p>
+    </a>
+  </ol>
+  <ol>
+    <img src="./img/ban.png" alt="banner" class="dex">
+  </ol>
+</ul>
+
+    <!--Fim Area Menu-->
+
+
+  
+  
+      <div class="conteudo">
+
+        <input type="text" name="buscar" id="buscar" class="buscar_txt" placeholder="Buscar">
+    <button class="buscar_btn">buscar</button>
+
     
-    <img src="./img/pokedexicon.png" alt="pokedexicon" class="pokeicon">
-    <div class="title">
-<h1>  
-  PokéDex
-</h1>
-</div>
+        <ul class="pokemons">
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/001.png" alt="Bulbasaur" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 001
+              </p>
+              <h5 class="nome">Bulbasaur</h5>
+              <div class="power">
+              <div class="tipo">Grass</div>
+              <div class="abilities">Poison</div>
+            </div>
+          </div>
+          </li>
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/002.png" alt="Ivysaur" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 002
+              </p>
+              <h5 class="nome">Ivysaur</h5>
+              <div class="power">
+                <div class="tipo">Grass</div>
+                <div class="abilities">Poison</div>
+            </div>
+          </div>
+          </li>
 
-<!--Area Menu-->
-  <ul class="menu">
-    <li class="home">
-      <img src="./img/pokeball.png" alt="" class="iconball">
-      <a href="./index.html" class="home">
-        Home
-      </a>
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/003.png" alt="Venusaur" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 003
+              </p>
+              <h5 class="nome">Venusaur</h5>
+              <div class="power">
+                <div class="tipo">Grass</div>
+                <div class="abilities">Poison</div>
+          </div>
+        </div>
+          </li>
 
-    </li>
-<br>
-    <li class="">
-      <img src="./img/pokeball.png" alt="" class="iconball">
-      <a href="./categorias.html" class="categorias">
-        Categorias
-      </a>
-    </li>
-<br>
-    <li>
-      <img src="./img/pokeball.png" alt="" class="iconball">
-      <a href="./login.html" class="login">
-        Login
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/004.png" alt="Charmander" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 004
+              </p>
+              <h5 class="nome">Charmander</h5>
+              <div class="power">
+              <div class="tipo">Fire</div>
+              <div class="abilities"></div>
+            </div>
+          </div>
+          </li>
 
-      </a>
-    </li>
-  </ul>
-<!--Fim Area Menu-->
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/005.png" alt="Charmeleon" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 005
+              </p>
+              <h5 class="nome">Charmeleon</h5>
+              <div class="power">
+              <div class="tipo">Fire</div>
+              <div class="abilities"></div>
+            </div>
+          </div>
+          </li>
 
-<div class="categoria">
-<h1>Categorias</h1>
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/006.png" alt="Charizard" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 006
+              </p>
+              <h5 class="nome">Charizard</h5>
+              <div class="power">
+              <div class="tipo">Fire</div>
+              <div class="abilities">Flying</div>
+            </div>
+          </div>
+          </li>
+          <br>
 
-<img src="./img/bulbasaur2.png" alt="" class="bul">
-<p class="bult">Os Pokémon iniciais são os que os treinadores recebem no início de suas jornadas, geralmente um de Fogo, Água e Planta.</p>
+        </ul>
 
-<img src="./img/mewtwo.png" alt="" class="mew">
-<p class="mewt">Pokémon lendários são únicos e muitas vezes têm histórias mitológicas associadas a eles.</p>
+        <ul class="pokemons">
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/007.png" alt="Bulbasaur" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 007
+              </p>
+              <h5 class="nome">Squirtle</h5>
+              <div class="power">
+              <div class="tipo">Water</div>
+              <div class="abilities"></div>
+            </div>
+          </div>
+          </li>
 
-<img src="./img/jirachi.png" alt="" class="jir">
-<p class="jirt">Os Pokémon míticos também são únicos, mas são geralmente obtidos através de eventos especiais.</p>
-</div>
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/008.png" alt="Ivysaur" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 008
+              </p>
+              <h5 class="nome">Wartortle</h5>
+              <div class="power">
+                <div class="tipo">Water</div>
+                <div class="abilities"></div>
+            </div>
+          </div>
+          </li>
 
-</body>
-</html>
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/009.png" alt="Venusaur" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 009
+              </p>
+              <h5 class="nome">Blastoise</h5>
+              <div class="power">
+                <div class="tipo">Water</div>
+                <div class="abilities"></div>
+            </div>
+          </div>
+          </li>
+
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/010.png" alt="Charmander" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 010
+              </p>
+              <h5 class="nome">Caterpie</h5>
+              <div class="power">
+              <div class="tipo">Bug</div>
+              <div class="abilities"></div>
+            </div>
+          </div>
+          </li>
+
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/011.png" alt="Charmeleon" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 011
+              </p>
+              <h5 class="nome">Metapod</h5>
+              <div class="power">
+              <div class="tipo">Bug</div>
+              <div class="abilities"></div>
+            </div>
+          </div>
+          </li>
+
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/012.png" alt="Charizard" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 012
+              </p>
+              <h5 class="nome">Butterfree </h5>
+              <div class="power">
+              <div class="tipo">Bug</div>
+              <div class="abilities">Flying</div>
+            </div>
+          </div>
+          </li>
+          <br>
+
+        </ul>
+        <ul class="pokemons">
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/013.png" alt="Bulbasaur" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 013
+              </p>
+              <h5 class="nome">Weedle </h5>
+              <div class="power">
+              <div class="tipo">Bug</div>
+              <div class="abilities">Poison</div>
+            </div>
+         </div>
+          </li>
+
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/014.png" alt="Ivysaur" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 014
+              </p>
+              <h5 class="nome">Kakuna </h5>
+              <div class="power">
+                <div class="tipo">Bug</div>
+                <div class="abilities">Poison</div>
+            </div>
+          </div>
+          </li>
+
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/015.png" alt="Venusaur" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 015
+              </p>
+              <h5 class="nome">Beedrill </h5>
+              <div class="power">
+                <div class="tipo">Bug</div>
+                <div class="abilities">Poison</div>
+            </div>
+          </div>
+          </li>
+
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/016.png" alt="Charmander" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 016
+              </p>
+              <h5 class="nome">Pidgey </h5>
+              <div class="power">
+              <div class="tipo">Normal</div>
+              <div class="abilities">Flying</div>
+            </div>
+          </div>
+          </li>
+
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/017.png" alt="Charmeleon" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 017
+              </p>
+              <h5 class="nome">Pidgeotto </h5>
+              <div class="power">
+              <div class="tipo">Normal</div>
+              <div class="abilities">Flying</div>
+            </div>
+         </div>
+          </li>
+
+          <li class="card">
+            <a href="#">
+              <img src="./img/pokemons/018.png" alt="Charizard" class="pokemon">
+            </a>
+            <div class="info">
+              <p class="id">
+                Nº 018
+              </p>
+              <h5 class="nome">Pidgeot</h5>
+              <div class="power">
+              <div class="tipo">Normal</div>
+              <div class="abilities">Flying</div>
+            </div>
+          </div>
+          </li>
+          <br>
+
+        </ul>
+      </div>
+      <div class="rodape">
+      </div>
+  
+      <div class="ban">
+        <img src="./img/banla.jpg" alt="Banner" class="ban">
+      </div>
+      
+      <div class="banner">
+        <img src="./img/banla.jpg" alt="Banner" class="banner">
+      </div>
+    </div>
+  
+  </div>
+  </div>
+  </body>
+  </html>
+  
